完成配置管理页面重构
